force-app/main/default/src/objects/Regeneron_Adobe_Sign_Settings_MVN__c/Regeneron_Adobe_Sign_Settings_MVN__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Holds the config for the Regeneron custom API connection to Adobe Sign</description>
    <label>Regeneron Adobe Sign Settings</label>
</CustomObject>