force-app/main/default/src/objects/Regeneron_Adobe_Sign_Settings_MVN__c/fields/Authentication_Endpoint_MVN__c.field-meta.xml
<CustomField>
    <fullName>Authentication_Endpoint_MVN__c</fullName>
    <description>The endpoint to call for authentication actions such as obtaining an access token</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The endpoint to call for authentication actions such as obtaining an access token</inlineHelpText>
    <label>Authentication Endpoint</label>
    <required>true</required>
    <type>Url</type>
</CustomField>