force-app/main/default/src/objects/Regeneron_Adobe_Sign_Settings_MVN__c/fields/Client_Id_MVN__c.field-meta.xml
<CustomField>
    <fullName>Client_Id_MVN__c</fullName>
    <description>The client id for the Adobe Sign App</description>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <inlineHelpText>The client id for the Adobe Sign App</inlineHelpText>
    <label>Client Id</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>