force-app/main/default/src/objects/Regeneron_Adobe_Sign_Settings_MVN__c/fields/Refresh_Token_MVN__c.field-meta.xml
<CustomField>
    <fullName>Refresh_Token_MVN__c</fullName>
    <description>The refresh token for the Adobe Sign App</description>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <inlineHelpText>The refresh token for the Adobe Sign App</inlineHelpText>
    <label>Refresh Token</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>