force-app/main/default/src/objects/Regeneron_Adobe_Sign_Settings_MVN__c/fields/REST_API_Endpoint_MVN__c.field-meta.xml
<CustomField>
    <fullName>REST_API_Endpoint_MVN__c</fullName>
    <description>The base endpoint to send all rest API calls to</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The base endpoint to send all rest API calls to</inlineHelpText>
    <label>REST API Endpoint</label>
    <required>true</required>
    <type>Url</type>
</CustomField>