force-app/main/default/src/objects/Regeneron_Adobe_Sign_Settings_MVN__c/fields/Webhook_Public_Site_MVN__c.field-meta.xml
<CustomField>
    <fullName>Webhook_Public_Site_MVN__c</fullName>
    <description>The url of the public site that the Adobe webhook can call</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The url of the public site that the Adobe webhook can call</inlineHelpText>
    <label>Webhook Public Site</label>
    <required>true</required>
    <type>Url</type>
</CustomField>